added view class

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
-    <script src="./dist/main.js"></script>
+    <script src="./dist/main.js" defer></script>
     <title>Mayhem Overload</title>
   </head>
 
   <body>
+    <h1>Mayhem Overload</h1>
+    <canvas id="game-canvas"></canvas>
   </body>
 
 </html>
