created sprite class

--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 
   <body>
     <div class="front">
-      <text id="gameTitle">Mayhem Overload</text>
-      <button id="playButton"></button>
+      <!-- <text id="gameTitle">Mayhem Overload</text>
+      <button id="playButton"></button> -->
+        <canvas id= "gameStage" class="game"></canvas>
+        <canvas id= "characters" class="game"></canvas>
+        <canvas id= "obstacles" class="game"></canvas>
+        <canvas id= "timer" class="game"></canvas>
+        <canvas id= "projectiles" class="game"></canvas>
     </div>
 
 
     <div class = "back">
-      <canvas id="titleBG"></canvas>
+      <!-- <canvas id="titleBG"></canvas> -->
       <!-- <canvas id= "gameBG" class="game"></canvas> -->
       <!-- <canvas id= "loadBG" class="load"></canvas> -->
     </div>
       <!-- Game Canvases -->
       <div id = "gameScreen" class="game">
         <!-- <canvas id= "gameBG" class="game"></canvas> -->
-        <canvas id= "gameStage" class="game"></canvas>
-        <canvas id= "characters" class="game"></canvas>
-        <canvas id= "obstacles" class="game"></canvas>
-        <canvas id= "timer" class="game"></canvas>
-        <canvas id= "projectiles" class="game"></canvas>
+        
       </div>
       <!-- Loading Screen Canvases -->
       <div id = "loadScreen" class="load">
