--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id = 'background_container'>
       <div id ="timer_div">
         <p id='timer'>Timer: </p>
-        <img src="src/timer1.png" id ="timer_bar"></img>
+        <img src="src/survival_timer1.png" id ="timer_bar"></img>
       </div>
       <div id ="hello_world"><p id="dialogue">... Hello World ...</p></div>
       <div id="lives">
