--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <div id="title"><p>Mayhem Overload</p></div>
         <div id="icons_div">
           <div id="empty_icon_div"></div>
-          <a href = "https://github.com/kennytram" target="_blank"><img src="/src/title/github.png" ></img></a>
+          <a href = "https://github.com/kennytram" target="_blank"><img src="src/title/github.png" ></img></a>
         </div>
       </div>
       <div id="bottom_title_box">
         <div id="controls"><p>Controls</p></div>
         <br>
         <div id="keyboard">
-          <img src="/src/title/keyboard_mute.png" id = "keyboard_img"></img>
+          <img src="src/title/keyboard_mute.png" id = "keyboard_img"></img>
         </div>
         <div id="start">
           <button id="startButton">
