--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
     <link rel="icon" type="image/x-icon" href="./src/favicon.png">
+    <link href="https://fonts.cdnfonts.com/css/maximum-impact" rel="stylesheet">
     <script src="./dist/main.js" defer></script>
     <script src="./src/scripts/keymaster.js"></script>
     <title>Mayhem Overload</title>
