test animation on github

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               class="social-icon" id="github-icon"></img></a>  
         </div>
       </div>
-      <!-- <div id="bottom_title_box">
+      <div id="bottom_title_box">
           <div id="controls">
             <p>Controls</p>
           </div>
@@ -55,7 +55,7 @@
           <div id="keyboard">
             <img src="assets/title/keyboard_mute.png" id="keyboard_img"></img>
           </div>
-        </div> -->
+        </div>
     </div>
   </div>
   <!-- <div id = "empty_container"></div>
