test animation on github

--- a/index.html
+++ b/index.html
@@ -41,34 +41,35 @@
           <p>Mayhem Overload</p>
         </div>
         <div id="icons-div">
-          <a href="https://www.linkedin.com/in/kennytram/" target="_blank"><img src="assets/title/linkedin-square.png"
+          <a href="https://www.linkedin.com/in/kennytram/" target="_blank"><img src="assets/title/link-square.png"
               class="social-icon" id="linkedin-icon"></img></a>
           <a href="https://github.com/kennytram" target="_blank"><img src="assets/title/github-square.png"
-              class="social-icon" id="github-icon"></img></a>  
+              class="social-icon" id="github-icon"></img></a>
+          <div id="lives">
+            <img src="assets/title/heart.png" id="heart1"></img>
+            <img src="assets/title/heart.png" id="heart2"></img>
+            <img src="assets/title/heart.png" id="heart3"></img>
+          </div>
         </div>
       </div>
+      <div id ="desc-text">Welcome!</div>
       <div id="bottom_title_box">
-          <div id="controls">
-            <p>Controls</p>
-          </div>
-          <br>
-          <div id="keyboard">
-            <img src="assets/title/keyboard_mute.png" id="keyboard_img"></img>
-          </div>
+        <div id="controls">
+          <p>Controls</p>
         </div>
+        <br>
+        <div id="keyboard">
+          <img src="assets/title/keyboard_mute.png" id="keyboard_img"></img>
+        </div>
+      </div>
     </div>
+    <canvas id= "canvas"></canvas>
   </div>
   <!-- <div id = "empty_container"></div>
     <div id = 'background_container'>
       <div id ="timer_div">
         <p id='timer'>Timer: </p>
         <img src="assets/survival_timer1.png" id ="timer_bar"></img>
-      </div>
-      <div id ="hello_world"><p id="dialogue">... Hello World ...</p></div>
-      <div id="lives">
-        <img src="assets/title/heart.png" id="heart1"></img>
-        <img src="assets/title/heart.png" id="heart2"></img>
-        <img src="assets/title/heart.png" id="heart3"></img>
       </div>
     </div> -->
   <!-- <canvas id= "canvas"></canvas> -->
