--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </div>
     </div>
-    <canvas id= "canvas"></canvas>
+    <!-- <canvas id= "canvas"></canvas> -->
   </div>
   <!-- <div id = "empty_container"></div>
     <div id = 'background_container'>
