--- a/index.html
+++ b/index.html
@@ -29,49 +29,55 @@
   <!-- <img id="nintendo-switch-bg" src="assets/title/nintendo-switch-bg.png"> -->
   <!-- <div id="score_div">Score: 0</div> -->
   <!-- <div id="empty_icon_div"></div> -->
-  <!-- <div id="start">
-    <button id="startButton">
-    </button>
-  </div> -->
+  <!--  -->
+  <!-- <div id = "empty_container"></div>
+    <div id = 'background_container'> -->
   <div id="game-container">
-    <div id="game-wrapper">
-      <div id="top-title-box">
-        <div id="score-div">Score: 0</div>
-        <div id="title">
-          <p>Mayhem Overload</p>
-        </div>
-        <div id="icons-div">
-          <a href="https://www.linkedin.com/in/kennytram/" target="_blank"><img src="assets/title/link-square.png"
-              class="social-icon" id="linkedin-icon"></img></a>
-          <a href="https://github.com/kennytram" target="_blank"><img src="assets/title/github-square.png"
-              class="social-icon" id="github-icon"></img></a>
-          <div id="lives">
-            <img src="assets/title/heart.png" id="heart1"></img>
-            <img src="assets/title/heart.png" id="heart2"></img>
-            <img src="assets/title/heart.png" id="heart3"></img>
-          </div>
-        </div>
+    <div id="top-title-box">
+      <div id="score">
+        Score: 0
       </div>
-      <div id ="desc-text">Welcome!</div>
-      <div id="bottom_title_box">
-        <div id="controls">
-          <p>Controls</p>
-        </div>
-        <br>
-        <div id="keyboard">
-          <img src="assets/title/keyboard_mute.png" id="keyboard_img"></img>
+      <div class="left icons-div">
+        <a href="https://www.linkedin.com/in/kennytram/" target="_blank"><img src="assets/title/link-square.png"
+            class="social-icon" id="linkedin-icon"></img></a>
+      </div>
+      <div id="title">
+        <p>Mayhem Overload</p>
+      </div>
+      <div class="right icons-div">
+        <a href="https://github.com/kennytram" target="_blank"><img src="assets/title/github-square.png"
+            class="social-icon" id="github-icon"></img></a>
+        <div id="lives">
+          <img src="assets/title/heart.png" id="heart1"></img>
+          <img src="assets/title/heart.png" id="heart2"></img>
+          <img src="assets/title/heart.png" id="heart3"></img>
         </div>
       </div>
     </div>
-    <!-- <canvas id= "canvas"></canvas> -->
-  </div>
-  <!-- <div id = "empty_container"></div>
-    <div id = 'background_container'>
-      <div id ="timer_div">
-        <p id='timer'>Timer: </p>
-        <img src="assets/survival_timer1.png" id ="timer_bar"></img>
+    <div id="desc-text">Welcome!</div>
+    <div id="bottom_title_box">
+      <div id="controls">
+        <p>Controls</p>
       </div>
-    </div> -->
-  <!-- <canvas id= "canvas"></canvas> -->
+      <br>
+      <div id="keyboard">
+        <img src="assets/title/keyboard_mute.png" class="keyboard_img"></img>
+        <img src="assets/title/keyboard_hover.png" class="keyboard_img"></img>
+      </div>
+    </div>
 
+    <div id="bottom-box">
+      <div id="start">
+        <button id="startButton"></button>
+      </div>
+      <div id="timer_div">
+        <p id='timer'>Timer: </p>
+        <img src="assets/survival_timer1.png" id="timer_bar"></img>
+        
+      </div>
+      <div id="creator">created by Kenny Tram</div>
+    </div>
+    <canvas id="canvas"></canvas>
+    
+  </div>
 </body>
