--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0"> -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -57,8 +60,7 @@
 
     <div id="bottom-box">
       <div id="start">
-        <img src="assets/title/start.png" id="startButton" onmouseover="hoverStart()" onmousedown="clickStart()"
-          onmouseup="releaseStart()"></img>
+        <img src="assets/title/start.png" id="startButton"></img>
       </div>
       <div id="timer_div">
         <p id='timer'>Timer: </p>
