--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <a href="https://github.com/kennytram" target="_blank"><img src="assets/title/github-square.png"
             class="social-icon" id="github-icon"></img></a>
         <div id="lives">
-          <img src="assets/title/heart.png" id="heart1"></img>
-          <img src="assets/title/heart.png" id="heart2"></img>
-          <img src="assets/title/heart.png" id="heart3"></img>
+          <img src="assets/title/heart.png" class="heart" id="heart1"></img>
+          <img src="assets/title/heart.png" class="heart" id="heart2"></img>
+          <img src="assets/title/heart.png" class="heart" id="heart3"></img>
         </div>
       </div>
     </div>
