--- a/index.html
+++ b/index.html
@@ -24,52 +24,57 @@
 </html>
 
 <body>
-  <div id="game-container">
-    <div id="top-title-box">
-      <div id="score">
-        Score: 0
-      </div>
-      <div class="left icons-div">
-        <a href="https://www.linkedin.com/in/kennytram/" target="_blank"><img src="assets/title/link-square.png"
-            class="social-icon" id="linkedin-icon"></img></a>
-      </div>
-      <div id="title">
-        <p>Mayhem Overload</p>
-      </div>
-      <div class="right icons-div">
-        <a href="https://github.com/kennytram" target="_blank"><img src="assets/title/github-square.png"
-            class="social-icon" id="github-icon"></img></a>
-        <div id="lives">
-          <img src="assets/title/heart.png" class="heart" id="heart1"></img>
-          <img src="assets/title/heart.png" class="heart" id="heart2"></img>
-          <img src="assets/title/heart.png" class="heart" id="heart3"></img>
+  <div id="tooltip">
+    Press Space to start blowing up the world!
+  </div>
+  <div id="game-layer">
+    <div id="game-container">
+      <div id="top-title-box">
+        <div id="score">
+          Score: 0
+        </div>
+        <div class="left icons-div">
+          <a href="https://www.linkedin.com/in/kennytram/" target="_blank"><img src="assets/title/link-square.png"
+              class="social-icon" id="linkedin-icon"></img></a>
+        </div>
+        <div id="title">
+          <p>Mayhem Overload</p>
+        </div>
+        <div class="right icons-div">
+          <a href="https://github.com/kennytram" target="_blank"><img src="assets/title/github-square.png"
+              class="social-icon" id="github-icon"></img></a>
+          <div id="lives">
+            <img src="assets/title/heart.png" class="heart" id="heart1"></img>
+            <img src="assets/title/heart.png" class="heart" id="heart2"></img>
+            <img src="assets/title/heart.png" class="heart" id="heart3"></img>
+          </div>
         </div>
       </div>
-    </div>
-    <div id="desc-text">Welcome!</div>
-    <div id="bottom_title_box">
-      <div id="controls">
-        <p>Controls</p>
+      <div id="desc-text">Welcome!</div>
+      <div id="bottom_title_box">
+        <div id="controls">
+          <p>Controls</p>
+        </div>
+        <br>
+        <div id="keyboard">
+          <img src="assets/title/keyboard_mute.png" class="keyboard_img"></img>
+          <img src="assets/title/keyboard_hover.png" class="keyboard_img"></img>
+        </div>
       </div>
-      <br>
-      <div id="keyboard">
-        <img src="assets/title/keyboard_mute.png" class="keyboard_img"></img>
-        <img src="assets/title/keyboard_hover.png" class="keyboard_img"></img>
-      </div>
-    </div>
 
-    <div id="bottom-box">
-      <div id="start">
-        <img src="assets/title/start.png" id="startButton"></img>
-      </div>
-      <div id="timer_div">
-        <p id='timer'>Timer: </p>
-        <img src="assets/survival_timer1.png" id="timer_bar"></img>
+      <div id="bottom-box">
+        <div id="start">
+          <img src="assets/title/start.png" id="startButton"></img>
+        </div>
+        <div id="timer_div">
+          <p id='timer'>Timer: </p>
+          <img src="assets/survival_timer1.png" id="timer_bar"></img>
 
+        </div>
+        <div id="creator">created by Kenny Tram</div>
       </div>
-      <div id="creator">created by Kenny Tram</div>
+      <canvas id="canvas"></canvas>
+
     </div>
-    <canvas id="canvas"></canvas>
-
   </div>
 </body>
