fix tooltip position

--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
 </html>
 
 <body>
-  <div id="tooltip">
-    Press Space to start blowing up the world!
-  </div>
+
   <div id="game-layer">
     <div id="game-container">
+      <div id="tooltip-container">
+        <div id="tooltip">
+          Press Space to start blowing up the world!
+        </div>
+      </div>
       <div id="top-title-box">
+
         <div id="score">
           Score: 0
         </div>
@@ -37,8 +41,10 @@
           <a href="https://www.linkedin.com/in/kennytram/" target="_blank"><img src="assets/title/link-square.png"
               class="social-icon" id="linkedin-icon"></img></a>
         </div>
+
         <div id="title">
           <p>Mayhem Overload</p>
+
         </div>
         <div class="right icons-div">
           <a href="https://github.com/kennytram" target="_blank"><img src="assets/title/github-square.png"
