--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <meta property="og:title" content="Mayhem Overload" />
+  <meta property="og:image" content="project_pic.png" />
+  <meta property="og:description" content="A brief description of your project" />
+  <meta property="og:url" content="https://programmer.github.io/project_name" />
   <script src="./dist/main.js" defer></script>
   <script src="./src/scripts/keymaster.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
