--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <meta property="og:title" content="Mayhem Overload" />
-  <meta property="og:image" content="project_pic.png" />
-  <meta property="og:description" content="A brief description of your project" />
-  <meta property="og:url" content="https://programmer.github.io/project_name" />
+  <meta property="og:image" content="https://github.com/kennytram/Mayhem-Overload/blob/main/assets/README_images/game_splash.png?raw=true" />
+  <meta property="og:description" content="A game that is overloaded with mayhem." />
+  <meta property="og:url" content="https://kennytram.github.io/Mayhem-Overload/" />
   <script src="./dist/main.js" defer></script>
   <script src="./src/scripts/keymaster.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
